--- a/.gitignore
+++ b/.gitignore
@@ -444,5 +444,7 @@ TSWLatexianTemp*
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
 
-# Large image dataset retrieved from kaggle.
+# Large datasets.
 assignments/asgmt_2/data/img/
+tutorials/data/MNIST/
+tutorials/data/cifar-10-*
