--- a/Pipfile
+++ b/Pipfile
@@ -3,6 +3,11 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
+[[source]]
+name = "downloadpytorch"
+url = "https://download.pytorch.org/whl/cpu/"
+verify_ssl = true
+
 [packages]
 jupyter = "*"
 matplotlib = "*"
@@ -10,10 +15,13 @@ missingno = "*"
 numpy = "*"
 openpyxl = "*"
 pandas = "*"
+scikit-image = "*"
 scikit-learn = "*"
 scipy = "*"
 seaborn = "*"
 statsmodels = "*"
+torch = "*"
+torchvision = "*"
 
 [dev-packages]
 bandit = "*"
@@ -24,9 +32,8 @@ jupytext = "*"
 mypy = "*"
 pydocstyle = "*"
 pylint = "*"
+tensorboard = "*"
+torch-tb-profiler = "*"
 
 [requires]
-python_version = "3.10"
-
-[pipenv]
-allow_prereleases = false
+python_version = "3.9"
