feat(asmgt_2): finish first part of assignment

--- a/Pipfile
+++ b/Pipfile
@@ -15,7 +15,7 @@ missingno = "*"
 numpy = "*"
 openpyxl = "*"
 pandas = "*"
-scikit-image = "*"
+pillow = "*"
 scikit-learn = "*"
 scipy = "*"
 seaborn = "*"
