chore(gitignore): ignore folder generated by `minted` latex package

--- a/.gitignore
+++ b/.gitignore
@@ -448,3 +448,4 @@ TSWLatexianTemp*
 assignments/asgmt_2/data/img/
 tutorials/data/MNIST/
 tutorials/data/cifar-10-*
+assignments/asgmt_2/docs/_minted-cmpe_351_asgmt_2
