--- a/Pipfile
+++ b/Pipfile
@@ -9,16 +9,20 @@ url = "https://download.pytorch.org/whl/cpu/"
 verify_ssl = true
 
 [packages]
+gensim = "*"
 jupyter = "*"
 matplotlib = "*"
 missingno = "*"
+nltk = "*"
 numpy = "*"
 openpyxl = "*"
 pandas = "*"
 pillow = "*"
+pyldavis = "*"
 scikit-learn = "*"
 scipy = "*"
 seaborn = "*"
+spacy = "*"
 statsmodels = "*"
 torch = "*"
 torchinfo = "*"
