--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,8 @@ dependencies = [
 ]
 name = "cmpe-351-advanced-data-analytics"
 readme = "README.md"
-requires-python = ">=3.9"
+# `torch` & `gensim` won't install on higher python versions.
+requires-python = "==3.9"
 version = "0.1.0"
 
 [dependency-groups]
